added logic to handle email service

--- a/DivineKids.UI/appsettings.json
+++ b/DivineKids.UI/appsettings.json
@@ -15,5 +15,14 @@
     "ExpirationMinutes": 60,
     "RefreshTokenExpirationDays": 7
   },
+  "Email": {
+    "FromName": "DivineKids Support",
+    "FromAddress": "no-reply@divinekids.local",
+    "Host": "smtp.yourhost.com",
+    "Port": 587,
+    "UseSsl": true,
+    "User": "smtp_username",
+    "Password": "smtp_password"
+  },
   "AllowedHosts": "*"
 }
