--- a/DivineKids.UI/appsettings.json
+++ b/DivineKids.UI/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=H-5CH2271N89\\SQLEXPRESS01;Database=DivineKidsdDB;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true"
+    "DefaultConnection": "Server=H-5CH2271N89\\SQLEXPRESS01;Database=DivineKidsdDB;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true",
+    "AzureMySqlConnection": "Server=shamahost.mysql.database.azure.com;Port=3306;database=divinekidsdb;User Id=shamalogin;Password=developer@123D;SslMode=Required;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
