return ok object instead of redirect

--- a/DivineKids.UI/appsettings.json
+++ b/DivineKids.UI/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=H-5CH2271N89\\SQLEXPRESS01;Database=DivineKidsdDB;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true",
-    "AzureMySqlConnection": "Server=72.60.101.178;Port=3306;database=divinekidsdb;User Id=root;Password=shamafoundation@786S;SslMode=Required;Connection Timeout=30;"
+    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=DivineKidsDb;Trusted_Connection=True;MultipleActiveResultSets=True;TrustServerCertificate=True",
+    "AzureMySqlConnection": "Server=72.60.101.178;Port=3306;Database=divinekidsdb;User Id=root;Password=shamafoundation@786S;SslMode=Required;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
