--- a/DivineKids.UI/appsettings.json
+++ b/DivineKids.UI/appsettings.json
@@ -18,8 +18,8 @@
   },
   "Email": {
     "FromName": "DivineKids Support",
-    "FromAddress": "no-reply@divinekids.local",
-    "Host": "smtp.yourhost.com",
+    "FromAddress": "shamafoundationhosting@gmail.com",
+    "Host": "smtp.gmail.com",
     "Port": 587,
     "UseSsl": true,
     "User": "smtp_username",
